--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@types/express": "^5.0.3",
-    "typescript": "^5.8.3"
+    "eslint": "^9.28.0",
+    "globals": "^16.2.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.0",
+    "@types/node": "^24.0.0",
+    "dbmate": "^2.27.0",
+    "prettier": "^3.5.3"
   },
   "dependencies": {
     "express": "^5.1.0",
