--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "@types/express": "^5.0.3",
-    "eslint": "^9.28.0",
-    "globals": "^16.2.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.0",
     "@types/node": "^24.0.0",
     "dbmate": "^2.27.0",
-    "prettier": "^3.5.3"
+    "eslint": "^9.28.0",
+    "globals": "^16.2.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.0"
   },
   "dependencies": {
+    "@types/pg": "^8.15.4",
     "express": "^5.1.0",
+    "pg": "^8.16.2",
     "zapatos": "^6.5.0"
   }
 }
