First pass at albums endpoint

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/pg": "^8.15.4",
     "express": "^5.1.0",
     "pg": "^8.16.2",
-    "zapatos": "^6.5.0"
+    "zapatos": "^6.5.0",
+    "zod": "^3.25.67"
   }
 }
