--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "@types/pg": "^8.15.4",
+    "debug": "^4.4.1",
     "express": "^5.1.0",
     "pg": "^8.16.2",
     "zapatos": "^6.5.0",
