--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/cors": "^2.8.19",
+    "@types/debug": "^4.1.12",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.0",
     "dbmate": "^2.27.0",
@@ -24,9 +25,11 @@
   },
   "dependencies": {
     "@types/pg": "^8.15.4",
+    "cors": "^2.8.5",
     "debug": "^4.4.1",
     "express": "^5.1.0",
     "pg": "^8.16.2",
+    "tsx": "^4.20.3",
     "zapatos": "^6.5.0",
     "zod": "^3.25.67"
   }
